--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,8 +12,10 @@
 
     <TextView
         android:id="@+id/txtGreeting"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:layout_margin="2dp"
         android:textSize="32sp"
         android:text="@string/greeting" />
     <Button
@@ -21,6 +23,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Click me!"
+        android:layout_below="@id/txtGreeting"
         android:onClick="buttonClicked"/>
+    <ImageView
+        android:id="@+id/picture"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:layout_toRightOf="@id/button"
+        android:layout_below="@id/txtGreeting"
+        android:src="@drawable/android_maneki"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="100dp">
 
-</LinearLayout>
+    </LinearLayout>
+
+</RelativeLayout>
